--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body{
+body {
   font-family: 'Roboto', sans-serif;
   font-style: normal;
   font-weight: normal;
@@ -9,18 +9,20 @@ body{
   height: 100vh;
   overflow: hidden;
 }
+
 /* Left and right section */
-.wrap, aside{
+.wrap,
+aside {
   overflow-y: scroll;
   scrollbar-width: none;
 }
 
-::-webkit-scrollbar{
+::-webkit-scrollbar {
   display: none;
 }
 
 /* Left section */
-.wrap{
+.wrap {
   max-width: 680px;
   width: 47.22%;
   padding-right: 43.05%;
@@ -28,7 +30,7 @@ body{
 }
 
 /* MSI 2020 */
-.wrap header h1{
+.wrap header h1 {
   font-weight: bold;
   font-size: 20px;
   line-height: 28px;
@@ -36,7 +38,7 @@ body{
 }
 
 /* Hey! */
-.wrap main h2:first-child{
+.wrap main h2:first-child {
   font-weight: bold;
   font-size: 32px;
   line-height: 44px;
@@ -44,7 +46,7 @@ body{
 }
 
 /* Get a joke */
-button.getJoke{
+button.getJoke {
   width: 152px;
   height: 42px;
   background: linear-gradient(92.01deg, #8EA7FF 0%, #7291FF 100%);
@@ -59,19 +61,19 @@ button.getJoke{
   cursor: pointer;
 }
 
-button.getJoke:active{
-  background: linear-gradient(92.01deg, #7291FF 0% , #8EA7FF 100%);
+button.getJoke:active {
+  background: linear-gradient(92.01deg, #7291FF 0%, #8EA7FF 100%);
 }
 
 /* Let’s try to find a joke for you: */
-.wrap main form > fieldset > legend{
+.wrap main form>fieldset>legend {
   font-weight: 500;
   font-size: 24px;
   line-height: 44px;
   margin-bottom: 43px;
 }
 
-.wrap main form > fieldset label {
+.wrap main form>fieldset label {
   font-size: 18px;
   line-height: 26px;
   display: block;
@@ -79,16 +81,17 @@ button.getJoke:active{
 }
 
 /* Select mode (random, from categories, search*/
-.wrap main form label{
+.wrap main form label {
   position: relative;
 }
 
-.wrap main form label span.radio{
+.wrap main form label span.radio {
   margin-left: 35px;
   margin-bottom: 10px;
 }
 
-.wrap span.radio::before, .wrap span.radio::after{
+.wrap span.radio::before,
+.wrap span.radio::after {
   content: '';
   display: block;
   position: absolute;
@@ -97,11 +100,11 @@ button.getJoke:active{
   margin: auto;
 }
 
-.wrap label:hover{
+.wrap label:hover {
   cursor: pointer;
 }
 
-.wrap span.radio::before{
+.wrap span.radio::before {
   width: 20px;
   height: 20px;
   border: 2px solid #ABABAB;
@@ -111,33 +114,33 @@ button.getJoke:active{
   cursor: pointer;
 }
 
-.wrap span.radio::after{
+.wrap span.radio::after {
   left: 5px;
   width: 10px;
   height: 10px;
   border-radius: 10px;
   background: white;
   transition: width 0.25s, height 0.25s, background-color .25s;
-  z-index: 1;
+  z-index: 0;
 }
 
-.wrap input[type="radio"]:checked + .radio::after{
+.wrap input[type="radio"]:checked+.radio::after {
   background: #333333;
   left: 5px;
 }
 
-.wrap input[type="radio"]:checked + .radio::before{
+.wrap input[type="radio"]:checked+.radio::before {
   border: 2px solid #333333;
   transition: border-color .25s;
 }
 
-.wrap input[type="radio"]{
-    display: none;
+.wrap input[type="radio"] {
+  display: none;
 }
 
 /* From categories */
 
-.wrap .categories > label > span.radio::before{
+.wrap .categories>label>span.radio::before {
   content: '';
   display: block;
   position: absolute;
@@ -147,7 +150,7 @@ button.getJoke:active{
   height: 100%;
 }
 
-.wrap .categories > label > span.radio::before{
+.wrap .categories>label>span.radio::before {
   width: 100%;
   border: 2px solid #F8F8F8;
   height: 28px;
@@ -159,14 +162,11 @@ button.getJoke:active{
   bottom: -3px;
 }
 
-.wrap .categories > label > input,
- .wrap .categories > label > span.radio::after{
+.wrap .categories>label>span.radio::after {
   display: none;
 }
 
-.wrap fieldset.categories > label > span.radio{
-  font-family: Roboto;
-  font-style: normal;
+.wrap fieldset.categories>label>span.radio {
   font-weight: 500;
   font-size: 12px;
   line-height: 16px;
@@ -176,81 +176,78 @@ button.getJoke:active{
   margin-left: 0;
 }
 
-.wrap fieldset.categories{
+.wrap fieldset.categories {
   margin-bottom: 20px;
 }
 
-.wrap fieldset.categories > label{
-  padding: 6px 15px;
+.wrap fieldset.categories>label {
+  padding: 1px 15px;
   cursor: pointer;
   margin-right: 10px;
   display: inline-block;
-  margin-bottom: 0;
+
 }
 
-.wrap fieldset.categories > label input[type="radio"]:checked + .radio::before{
+.wrap fieldset.categories>label input[type="radio"]:checked+.radio::before {
   background: #F8F8F8;
   border: 2px solid #F8F8F8;
   box-sizing: border-box;
   border-radius: 6px;
-  transition:background-color .25s;
+  transition: background-color .25s;
 }
 
-.wrap fieldset.categories > label input[type="radio"]:checked + .radio{
+.wrap fieldset.categories>label input[type="radio"]:checked+.radio {
   color: #333333;
   transition: ease-in color .25s;
 }
 
-.wrap fieldset.categories > legend{
+.wrap fieldset.categories>legend {
   margin-bottom: 10px;
 }
 
-.wrap #search-field{
+/* Search field */
+
+.wrap #search-field {
   max-width: 680px;
   width: 100%;
   height: 42px;
   border: 2px solid #333333;
   box-sizing: border-box;
   border-radius: 10px;
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: normal;
+  font-family: inherit;
   font-size: 16px;
   line-height: 22px;
   padding-left: 15px;
   margin-top: 10px;
-  position: relative;
+  color: inherit;
+  display: block;
+  margin-top: 20px;
 }
 
-.wrap #search-field::-webkit-input-placeholder{
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 22px;
+.wrap #search-field::-webkit-input-placeholder {
   color: #ABABAB;
 }
 
-.wrap #search-field::-webkit-search-cancel-button{
-  position:relative;
-  right:5px;  
+.wrap #search-field::-webkit-search-cancel-button {
+  position: relative;
+  right: 5px;
   -webkit-appearance: none;
   height: 20px;
   width: 20px;
-  border-radius:10px;
-  background: 
-    repeating-linear-gradient(
-      45deg,
+  border-radius: 10px;
+  background:
+    repeating-linear-gradient(45deg,
       #ABABAB,
       #ABABAB 2px,
       transparent 2px,
-      transparent 13px /* determines size */
-    ), repeating-linear-gradient(
-      135deg,
+      transparent 13px
+      /* determines size */
+    ), repeating-linear-gradient(135deg,
       #ABABAB,
       #ABABAB 2px,
       transparent 2px,
-      transparent 13px /* determines size */
+      transparent 13px
+      /* determines size */
     );
   transition: opacity 0.25s;
 }
@@ -281,18 +278,12 @@ section article span.message {
   align-items: center;
 }
 
-main section article h2{
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: normal;
+main section article h2 {
   font-size: 18px;
   line-height: 26px;
-  color: #333333;
 }
 
-section article address{
-  font-family: Roboto;
-  font-style: normal;
+section article address {
   font-weight: 500;
   font-size: 10px;
   line-height: 14px;
@@ -300,38 +291,33 @@ section article address{
   margin-bottom: 5px;
 }
 
-section article address a{
+section article address a {
   color: #8EA7FF;
   text-decoration: none;
 }
 
-section article address a span{
+section article address a span {
   text-decoration: underline;
   margin-right: 3px;
 }
 
-section article p{
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: normal;
+section article p {
   font-size: 10px;
   line-height: 14px;
   color: #ABABAB;
   margin-top: 28px;
 }
 
-section article p time{
+section article p time {
   font-weight: 500;
 }
 
-main section article mark{
+main section article mark {
   position: absolute;
   right: 40px;
   bottom: 40px;
   background: #FFFFFF;
   border-radius: 6px;
-  font-family: Roboto;
-  font-style: normal;
   font-weight: 500;
   font-size: 10px;
   line-height: 14px;
@@ -339,15 +325,21 @@ main section article mark{
   text-transform: uppercase;
   color: #333333;
   padding: 6px 20px;
+  height: 24px;
+  box-sizing: border-box;
 }
+
 /* heart */
-section article .like{
+
+section article .like {
   position: absolute;
   top: 40px;
   right: 40px;
 }
-/* Favourite jokes */
-aside{
+
+/* Favourite jokes (right section) */
+
+aside {
   width: 33.33%;
   background: #F8F8F8;
   height: 100vh;
@@ -356,9 +348,7 @@ aside{
   top: 0;
 }
 
-aside h2{
-  font-family: Roboto;
-  font-style: normal;
+aside h2 {
   font-weight: 500;
   font-size: 20px;
   line-height: 28px;
@@ -366,9 +356,11 @@ aside h2{
   margin-top: 40px;
   margin-bottom: 20px;
   margin-left: 8.33%;
+  margin-right: 40px;
+  z-index: 1;
 }
 
-aside section article{
+aside section article {
   background: #FFFFFF;
   border: 1px solid #F8F8F8;
   box-sizing: border-box;
@@ -382,33 +374,183 @@ aside section article{
   margin-bottom: 20px;
 }
 
-aside section article h2{
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: normal;
+aside section article h2 {
   font-size: 14px;
   line-height: 20px;
-  color: #333333;
   margin: 0;
   margin-top: 5px;
 }
 
-aside section article span.message{
+aside section article span.message {
   left: 5%;
   background: #F8F8F8;
 }
 
-aside section article .like{
+aside section article .like {
   top: 20px;
   right: 20px;
 }
 
-aside section article mark{
+aside section article mark {
   display: none;
 }
 
-aside section article p{
+aside section article p {
   margin-top: 20px;
   margin-bottom: 20px;
 }
 
+.menu{
+  display: none
+}
+
+@media screen and (max-width: 834px) {
+  
+  /* blur */
+  body::after {
+    display: none;
+    opacity: 1;
+    transition: all 0.5s;
+    background: rgba(0, 0, 0, 0.35);
+    display: block;
+    content: '';
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    left: 0;
+    top: 0;
+  }
+
+  /* favourive jokes menu */
+  aside {
+    position: fixed;
+    max-width: 480px;
+    width: 100%;
+    z-index: 3;
+    transform: translate(480px, 0);
+  }
+
+  aside.show{
+    transform: translate(0, 0);
+    transition: transform 0.5s;
+  }
+  aside.hide{
+    transform: translate(480px, 0);
+    transition: transform 0.5s;
+  }
+
+  /* blur body on menu open */
+  body.blur-show::after{
+    background: rgba(0, 0, 0, 0.35);
+    opacity: 1;
+    z-index: 1;
+  }
+  body.blur-hide::after{
+    opacity: 0;
+    background: transparent;
+    z-index: -1;
+  }
+
+  aside > h2{
+    display: none;
+  }
+
+  aside section{
+    padding-top: 88px;
+  }
+
+  .wrap {
+    max-width: 100%;
+    width: 100%;
+    padding: 0 40px;
+    position: relative;
+  }
+
+  .wrap #search-field {
+    max-width: 100%;
+  }
+
+  /* Favourite button */
+  div.menu{
+    display: block;
+    position: absolute;
+    top: 40px;
+    right: 40px;
+    z-index: 5;
+  }
+
+  input.menu{
+    opacity: 0;
+    -webkit-touch-callout: none;
+    display: block;
+    width: 40px;
+    height: 40px;
+    margin: 0;
+    padding: 0;
+    bottom: 0;
+    position: absolute;
+    top: 35px;
+    right: 127px;
+    z-index: 6;
+  }
+
+  div.menu h2{
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 28px;
+    color: #ABABAB;
+    padding: 0;
+    margin: 0;
+    margin-left: 10px;
+  }
+
+  div.menu h2, div.menu div{
+    float: left;
+  }
+
+  div.menu div{
+    width: 28px;
+    height: 28px;
+    background: #333333;
+    border-radius: 14px;
+    padding-top: 10px;
+    padding-bottom: 16px;
+    box-sizing: border-box;
+  }
+
+  div.menu div span{
+    width: 14px;
+    height: 2px;
+    display: block;
+    background: #FFFFFF;
+    border-radius: 2px;
+    margin: 0 auto;
+    margin-bottom: 4px;
+    transform: none;
+    transition: transform 0.55s cubic-bezier(0.77, 0.2, 0.05, 1.0);
+  }
+
+  input.menu:checked~div.menu span:nth-child(1){
+    transform: rotate(45deg) translate(2px, 2px) scale(1.2, 1.2);
+    transition: transform 0.55s cubic-bezier(0.77, 0.2, 0.05, 1.0);
+  }
+
+  input.menu:checked~div.menu span:nth-child(2){
+    transform:  rotate(-45deg) translate(2px, -2px) scale(1.2, 1.2);
+    transition: transform 0.55s cubic-bezier(0.77, 0.2, 0.05, 1.0);
+  }
+
+  .cross-first{
+    transform: rotate(45deg) translate(2px, 2px) scale(1.2, 1.2);
+    transition: transform 0.55s cubic-bezier(0.77, 0.2, 0.05, 1.0);
+  }
+
+  .cross-last{
+    transform:  rotate(-45deg) translate(2px, -2px) scale(1.2, 1.2);
+    transition: transform 0.55s cubic-bezier(0.77, 0.2, 0.05, 1.0);
+  }
+
+   
+}
