--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -512,7 +512,7 @@ aside section article {
   position: relative;
   margin: 0 8.33%;
   margin-bottom: 20px;
-  transition: all 0.4s;
+  transition: all 0.350s;
   opacity: 1;
   max-height: 300px;
 }
@@ -521,8 +521,11 @@ aside section article.hide {
   opacity: 0;
   max-height: 0;
   overflow: hidden;
-  transition: all 0.4s;
-
+  transition: all 0.350s;
+  padding-top: 0;
+  padding-bottom: 0;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 aside section article h2 {
